dev/styles/_hero.scss
#hero-page {
    height: 100vh;
    width: 86%;
    margin-left: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(../../assets/bg.jpg);
    background-size: cover;
}
.hero-page__text {
    margin: 0 auto;
    text-align: center;
    color: white;
    font-size: 16px;
}
.hero-page__buttons {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
  a {
    border-radius: 4px;
    width: 142px;
    height: 40px;
    margin: 10px 10px;
    background-color: rgba(231, 190, 3, 0.9);
    border: none;
    color: white;
    font-size: 12px;
    transition: 0.6s;
    text-decoration: none;
    p {
      color: white;
      text-decoration: none;
      font-size: 12px;
    }
  }
}
  a:hover {
      background-color: black;
}

/* Landscape phone to portrait tablet */
@media (max-width: 900px) {
  #hero-page {
    width: 100%;
  }
}

/* Landscape phones and down */
@media (max-width: 480px) {
    .hero-page__text {
      width: 75%;
    h1 {
      font-size: 30px;
    }
    h5 {
      font-size: 16px;
    }
  }
  .hero-page__buttons {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    button {
      margin: 0 auto;
      margin-bottom: 10px;
    }
  }
}

